# strds

./: .gitignore  .gitlab-ci.yaml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
.junie/: guidelines.md
.run/: dataset c.run.xml  dataset.run.xml  mine c.run.xml  mine.run.xml  provide methods.run.xml  provide pynguin.run.xml  provide repository.run.xml  stats.run.xml
scripts/: top-c-modules.sh
src/res/: dataset.json  pynguin.xml  repos.csv
src/res/templates/: tex-table.tex
src/strds/: __init__.py  __main__.py  __version__.py  clone_projects.py  dataset.py  filter.py  flapy_csv_utils.py  mine.py  provide.py  pynguin_xml.py  stats.py  structure.py  structure.yaml
src/strds/utils/: __init__.py  clone_projects.py  filter.py  flapy_csv_utils.py  latex.py  pynguin_xml.py  structure.py
tests/: test_dataset.py  test_mine.py  test_provide.py  test_stats.py
tests/utils/: __init__.py  test_filter.py  test_structure.py
